Profile overflow fixed

--- a/phone/www/css/teacher.css
+++ b/phone/www/css/teacher.css
@@ -107,6 +107,12 @@ checkbox {
 #main {
 	color: #000;
 	z-index: 10;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+#main-content {
+	overflow-x: hidden;
 }
 
 #state-buttons {
